--- a/public/scss/pages/_giftcards.scss
+++ b/public/scss/pages/_giftcards.scss
@@ -96,6 +96,7 @@ $light-grey: #bebebe;
 
 @media(max-width: 720px){
   #giftcards{
+    padding-bottom: 30px;
     h1{
       font-size: 3rem;
     }
